Add screenshot toggle option

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = --html=report.html --self-contained-html --capture=tee-sys
+addopts = --html=report.html --self-contained-html --capture=tee-sys --screenshot on
